---------------------------------------------------------------------------------------------------
Version: 2.1.1
Date: ????
  Changes:
    - support quality for cargo/fluid wagons (they might have larger inventories).
---------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: 2025-02-12
  Changes:
    - support item quality for requesters and providers.
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2025-02-06
  Bugfixes:
    - Fix "unscheduled cargo" messages even if everything is ok. (#3, reported by @Litcube)
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2025-02-05
  Bugfixes:
    - Fix fluid capacity calculation (change for factorio 2.0 API)
    - Fix crash with fluid deliveries (#2, reported by @disifere)
    - Fix crash with assertion failed (#1, reported by @Hoochie63)
  Changes:
    - Fix weird fractional stack reports for fluids
    - Improve short-circuit logic
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2025-02-03
  Bugfixes:
    - Fixed the info.json (well, the *one* time I did not test it...)
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025-02-03
  Changes:
    - Ported to Factorio 2.0
---------------------------------------------------------------------------------------------------
Version: 1.18.6
Date: 2024-01-30
  Bugfixes:
    - Message delivery-removed-depot used fallback stop names instead of Rich Text #331
---------------------------------------------------------------------------------------------------
Version: 1.18.5
Date: 2023-08-30
  Features:
    - moved logistic ports to their own technology
    - new icon for logistic ports